--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">VOCẼ SABIA ?
+                <h3 class="subhead">VOCÊ SABIA ?
                 </h3>
                 <h1 class="display-1">Brasil é o segundo país no mundo que passa mais tempo na internet, 70% da população está conectada, são cerca de 126,9 milhões de pessoas. </h1>
             </div>
